# adventofcode-rust-2025

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
src/: lib.rs
