[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.30.9"
itertools = "0.14.0"
lazy-regex = "3.4.1"
num = "0.4.1"
phf = { version = "0.13.1", features = ["macros"] }
rand = "0.9.2"
rstest = "0.26.1"
svg = "0.18.0"
